; ModuleID = '/home/carl/AnghaBench/radare2/libr/core/extr_cmd_flag.c_rename_flag_ordinal.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/core/extr_cmd_flag.c_rename_flag_ordinal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rename_flag_t = type { %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"%s%d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @rename_flag_ordinal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rename_flag_ordinal(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.rename_flag_t*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = bitcast i8* %8 to %struct.rename_flag_t*
  store %struct.rename_flag_t* %9, %struct.rename_flag_t** %6, align 8
  %10 = load %struct.rename_flag_t*, %struct.rename_flag_t** %6, align 8
  %11 = getelementptr inbounds %struct.rename_flag_t, %struct.rename_flag_t* %10, i32 0, i32 2
  %12 = load i32, i32* %11, align 4
  %13 = load %struct.rename_flag_t*, %struct.rename_flag_t** %6, align 8
  %14 = getelementptr inbounds %struct.rename_flag_t, %struct.rename_flag_t* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 8
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %14, align 8
  %17 = call i8* @r_str_newf(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 %12, i32 %15)
  store i8* %17, i8** %7, align 8
  %18 = load i8*, i8** %7, align 8
  %19 = icmp ne i8* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %32

21:                                               ; preds = %2
  %22 = load %struct.rename_flag_t*, %struct.rename_flag_t** %6, align 8
  %23 = getelementptr inbounds %struct.rename_flag_t, %struct.rename_flag_t* %22, i32 0, i32 0
  %24 = load %struct.TYPE_2__*, %struct.TYPE_2__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = load i32*, i32** %4, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = call i32 @r_flag_rename(i32 %26, i32* %27, i8* %28)
  %30 = load i8*, i8** %7, align 8
  %31 = call i32 @free(i8* %30)
  store i32 1, i32* %3, align 4
  br label %32

32:                                               ; preds = %21, %20
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i8* @r_str_newf(i8*, i32, i32) #1

declare dso_local i32 @r_flag_rename(i32, i32*, i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
